log
Tue, Apr 15, 2025  8:52:39 PM: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
eeef3b7
Tue, Apr 15, 2025  8:53:07 PM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
5efb4da
Tue, Apr 15, 2025  8:53:55 PM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 30/70
e7a0085
Tue, Apr 15, 2025  8:54:47 PM: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
ee7a580
Tue, Apr 15, 2025  8:55:06 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
7ce688f
Tue, Apr 15, 2025  8:55:39 PM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
test.c: In function 'eraseMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
test.c:511:1: error: expected declaration or statement at end of input
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
d542372
Tue, Apr 15, 2025  8:55:58 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
f477cf3
Tue, Apr 15, 2025  8:56:50 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|3
total_score: 40/70
cdeb4ec
Tue, Apr 15, 2025  8:58:37 PM: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
1824e0a
Tue, Apr 15, 2025  8:59:48 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
1e0c76e
Tue, Apr 15, 2025  9:01:21 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
cc4f903
Tue, Apr 15, 2025  9:02:22 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
74af810
Tue, Apr 15, 2025  9:03:06 PM: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  14|1
total_score: 60/70
235ccf6
Tue, Apr 15, 2025  9:03:48 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
31580b2
Tue, Apr 15, 2025  9:05:40 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  17|0
total_score: 70/70
18fa4f2
